--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,12 +32,16 @@
         android:id="@+id/textView"
         android:layout_width="351dp"
         android:layout_height="120dp"
+        android:text="@string/mensajeBienvenida"
         android:textColor="@color/black"
         android:textSize="34sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/mensajeBienvenida" />
+        app:layout_constraintVertical_bias="0.519"
+        tools:text="@string/mensajeBienvenida"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
